--- a/giphy-api/src/App.css
+++ b/giphy-api/src/App.css
@@ -1,7 +1,15 @@
+body {
+  background-color: black;
+}
+h1 {
+  color: white;
+}
 .App {
   text-align: center;
 }
-
+a {
+  color: yellow;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
