--- a/giphy-api/src/App.css
+++ b/giphy-api/src/App.css
@@ -3,7 +3,10 @@ body {
 }
 h1 {
   color: white;
+  text-decoration: underline;
+  font-style: bold;
 }
+
 .App {
   text-align: center;
 }
@@ -14,7 +17,16 @@ a {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
 }
-
+input {
+  height: 30px;
+}
+button {
+  height: 30px;
+  width: 30%;
+  background-color: #eeff22;
+  color: black;
+  position: relative;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
