added icon for search

--- a/giphy-api/src/App.css
+++ b/giphy-api/src/App.css
@@ -9,7 +9,10 @@ h1 {
 
 .App {
   text-align: center;
-}
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;}
 a {
   color: yellow;
 }
@@ -37,7 +40,9 @@ button {
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+.button-search {
+  text-align: center;
+}
 .App-link {
   color: #61dafb;
 }
